--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,5 +1,5 @@
 <div class="cards">
-    <div class="card-single">
+    <a href="/dashboard/users" class="card-single">
       <div>
         <h1><%=numOfUser%></h1>
         <span>Users</span>
@@ -7,8 +7,8 @@
       <div>
         <span class="las la-users"></span>
       </div>
-    </div>
-    <div class="card-single">
+    </a>
+    <a href="/dashboard/viewApartment" class="card-single">
       <div>
         <h1><%=numOfPost%></h1>
         <span>Apartments</span>
@@ -16,7 +16,7 @@
       <div>
         <span class="las la-users"></span>
       </div>
-    </div>
+    </a>
     <div class="card-single">
       <div>
         <h1>65</h1>
