--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -30,8 +30,8 @@
                                 <i class="fa-solid fa-location-dot"></i>
                             </div>
                             <div class="inputAdress__inner">
-                                <span class="nameAdress">Location</span>
-                                <input class="inputNameAdress" type="text" placeholder="Bali bali Indonesia" >
+                                <span class="nameAdress">Bãi biển</span>
+                                <input class="inputNameAdress" type="text" placeholder="Biển đen" >
                             </div>
                         </div>
         
