--- a/views/admin/navbar.ejs
+++ b/views/admin/navbar.ejs
@@ -1,30 +1,12 @@
 <!-- Header section -->
 <header class="main-header">
     <div class="main-header">
-      <h3>
+      <h2>
         <label for="nav-toggle">
           <span class="las la-bars"></span>
         </label>
-        REAS
-      </h3>
-  
-      <div class="search-wrapper">
-        <span class="las la-search"> </span>
-        <input type="search" placeholder="Search here" />
-      </div>
-  
-      <div class="user-wrapper">
-        <img
-          src="https://hellohoa.com/wp-content/uploads/2019/01/cuc-hoa-mi-no-trong-ngay-dong.jpg"
-          width="40px"
-          height="40px"
-          alt=""
-        />
-        <div>
-          <h4>Admin group</h4>
-          <!-- <small>Super admin</small> -->
-        </div>
-      </div>
+        Real Estate Resort Analysis Support System
+      </h2>  
     </div>
   </header>
   <!-- End header -->
