--- a/views/admin.layouts/navbar.ejs
+++ b/views/admin.layouts/navbar.ejs
@@ -7,6 +7,10 @@
         </label>
         Real Estate Resort Analysis Support System
       </h2>  
+      <div class="search-wrapper">
+        <span class="las la-search"> </span>
+        <input type="search" placeholder="Search here" />
+      </div>
     </div>
   </header>
   <!-- End header -->
