--- a/views/admin.layouts/sidebar.ejs
+++ b/views/admin.layouts/sidebar.ejs
@@ -32,13 +32,13 @@
         </a>
       </li>
       <li>
-        <a href="/dashboard/comments">
+        <a href="/dashboard/comment">
           <span class="las la-clipboard-list"></span>
           <span>Bình Luận</span>
         </a>
       </li>
       <li>
-        <a href="/">
+        <a href="/dashboard/notification">
           <span class="las la-sign-out-alt"></span>
           <span>Thông báo</span>
         </a>
