--- a/views/layouts/footer.ejs
+++ b/views/layouts/footer.ejs
@@ -30,24 +30,24 @@
         </div>
         <div class="contentRight">
             <div class="contentRight">
-              <div>
-                <h6>Hướng dẫn</h6>
-                <li><a href="">Báo giá & hỗ trợ</a></li>
-                <li><a href="">Câu hỏi thường gặp</a></li>
-                <li><a href="">Thông báo</a></li>
-                <li><a href="">Liên hệ</a></li>
+              <div class="contentRight_list">
+                <h6 class="contentRight_list_title">Hướng dẫn</h6>
+                <li class="contentRight_list_item"><a href="">Báo giá & hỗ trợ</a></li>
+                <li class="contentRight_list_item"><a href="">Câu hỏi thường gặp</a></li>
+                <li class="contentRight_list_item"><a href="">Thông báo</a></li>
+                <li class="contentRight_list_item"><a href="">Liên hệ</a></li>
               </div>
             </div>
            
             <div class="contentRight">
               <div>
-                <h6>QUY ĐỊNH</h6>
-                <li><a href="">Quy định đăng tin</a></li>
-                <li><a href="">Quy chế hoạt động</a></li>
-                <li><a href="">Điều khoản thỏa thuận</a></li>
-                <li><a href="">Chính sách bảo mật</a></li>
-                <li><a href="">Giải quyết khiếu nại</a></li>
-                <li><a href="">Góp ý báo lỗi</a></li>
+                <h6 class="contentRight_list_title">QUY ĐỊNH</h6>
+                <li class="contentRight_list_item"><a href="">Quy định đăng tin</a></li>
+                <li class="contentRight_list_item"><a href="">Quy chế hoạt động</a></li>
+                <li class="contentRight_list_item"><a href="">Điều khoản thỏa thuận</a></li>
+                <li class="contentRight_list_item"><a href="">Chính sách bảo mật</a></li>
+                <li class="contentRight_list_item"><a href="">Giải quyết khiếu nại</a></li>
+                <li class="contentRight_list_item"><a href="">Góp ý báo lỗi</a></li>
               </div>
             </div>
 
