--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -27,3 +27,7 @@
       </div>
     </div>
   </div>
+  <script>
+    const $ = document.querySelector.bind(document)
+    $(".sidebar-menu_dashboard").classList.add("active");
+</script>
