--- a/views/admin/notification.ejs
+++ b/views/admin/notification.ejs
@@ -1,1 +1,61 @@
-<h1>GAM TIMES</h1>
+
+    <!-- CONTENT  -->
+    <section class="content">
+        <div class="content-header"></div>
+        <div class="content__body  ">
+          <div class="card">
+            <div class="card-header bg-primary ">
+              <h4>Quản lý thông báo</h4>
+            </div>
+            <div class="card-body">
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th class="text-center align-middle">STT</th>
+                    <th class="text-center align-middle">Email</th>
+                    <th class="text-center align-middle">Sdt</th>
+                    <th class="text-center align-middle">Name</th>
+                    <th class="text-center align-middle">Nội dung thông báo</th>
+                    <th class="text-center align-middle">Thời gian</th>
+                    <th class="text-center align-middle" >Action</th>
+                  </tr>
+                </thead>
+               
+                  <tbody>
+                    <th class="text-center align-middle">1</th>
+                    <td class="text-center align-middle">minhdz142001@gmail.com</td>
+                    <td class="text-center align-middle">0565758488</td>
+                    <td class="text-center align-middle">Minh </td>
+                    <td class="text-center align-middle text-wrap " >Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này </td>
+                    <td class="text-center align-middle text-nowrap">21-10-2022 </td>
+                    
+                    <td class="text-center align-middle">
+                        <button class="btn btn-danger"> Xóa </button>
+                    </td>
+                    </tbody>
+                    <tbody>
+                        <th class="text-center align-middle">1</th>
+                        <td class="text-center align-middle">minhdz142001@gmail.com</td>
+                        <td class="text-center align-middle">0565758488</td>
+                        <td class="text-center align-middle">Minh </td>
+                        <td class="text-center align-middle">Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này Tôi cần tư vấn về căn hộ này </td>
+                        <td class="text-center align-middle text-nowrap">21-10-2022 </td>
+                        <td class="text-center align-middle">
+                            <button class="btn btn-danger"> Xóa </button>
+                        </td>
+                        </tbody>
+              </table>
+            </div>
+            
+          </div>
+           <!-- DELETE modal  -->
+            <!-- Modal -->
+            
+        </div>
+<script>
+            const $ = document.querySelector.bind(document)
+            $(".sidebar-menu_notification").classList.add("active");
+</script>
+  
+  
+  
