--- a/views/admin/upload.ejs
+++ b/views/admin/upload.ejs
@@ -155,3 +155,7 @@
     </div>
         </div>
       </div>
+<script>
+        const $ = document.querySelector.bind(document)
+        $(".sidebar-menu_upload").classList.add("active");
+</script>
