--- a/views/admin/viewApartment.ejs
+++ b/views/admin/viewApartment.ejs
@@ -115,3 +115,7 @@
     
   </div>
 </div>
+<script>
+  const $ = document.querySelector.bind(document)
+  $(".sidebar-menu_apartment").classList.add("active");
+</script>
