--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -370,3 +370,61 @@ body {
 .bottom__list {
   margin-bottom: 30px;
 }
+
+html{
+  scroll-behavior: smooth;
+}
+
+.buttonToTop{}
+.to-top{
+  background: white;
+  position: fixed;
+  bottom: 44px;
+  right: 40px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  font-size: 32px;
+  color: #1b1d32;
+  opacity: 0;
+  pointer-events: none;
+  transition: all .4s ;
+}
+.to-top.activeTop{
+  bottom: 32px;
+  pointer-events: auto;
+  opacity: 1;
+}
+.to-top:hover{
+  background: #C5C5C5;
+  color: #1b1d32;
+}
+
+#myBtn {
+  display: none; 
+  position: fixed; 
+  bottom: 30px; 
+  right: 30px; 
+  z-index: 99;  
+  border: none; 
+  outline: none; 
+  background-color: rgba(0,0,0, 0.5); 
+  color: white; 
+  cursor: pointer; 
+  padding: 15px; 
+  border-radius: 50%; 
+  font-size: 18px;
+  width: 60px;
+  height: 60px;
+}
+#myBtn i {
+  font-size: 30px;
+  padding-top: 1px;
+}
+
+#myBtn:hover {
+  background-color: #555; 
+}
