--- a/views/admin.layouts/sidebar.ejs
+++ b/views/admin.layouts/sidebar.ejs
@@ -7,49 +7,50 @@
 
   <div class="sidebar-menu">
     <ul>
-      <li class="">
-        <a href="/dashboard" class="active">
-          <span class="las la-home"></span>
-          <span>Trang chủ</span>
-        </a>
+      <li >
+          <a href="/dashboard"  class="sidebar-menu_dashboard">
+            <span class="las la-home"></span>
+            <span>Trang chủ</span>
+          </a>
       </li>
-      <li>
-        <a href="/dashboard/users">
+      <li class="">
+        <a href="/dashboard/users" class=" sidebar-menu_user" >
           <span class="las la-desktop"></span>
           <span>Người Dùng</span>
         </a>
       </li>
-      <li>
-        <a href="/dashboard/viewApartment">
+      <li class="">
+        <a href="/dashboard/viewApartment" class=" sidebar-menu_apartment">
           <span class="las la-clipboard-list"></span>
           <span>Căn hộ</span>
         </a>
       </li>
-      <li>
-        <a href="/dashboard/upload">
+      <li class="">
+        <a href="/dashboard/upload" class="sidebar-menu_upload">
           <span class="las la-clipboard-list"></span>
           <span>Đăng tin</span>
         </a>
       </li>
-      <li>
-        <a href="/dashboard/comment">
+      <li class="">
+        <a href="/dashboard/comment" class="sidebar-menu_comment">
           <span class="las la-clipboard-list"></span>
           <span>Bình Luận</span>
         </a>
       </li>
-      <li>
-        <a href="/dashboard/notification">
+      <li class="">
+        <a href="/dashboard/notification" class=" sidebar-menu_notification">
           <span class="las la-sign-out-alt"></span>
           <span>Thông báo</span>
         </a>
       </li>
-      <li>
-        <a href="/logout">
-          <span class="las la-sign-out-alt"></span>
+      <li class="">
+        <a href="/logout"  class="" >
+         <span class="las la-sign-out-alt"></span>
           <span>Logout</span>
         </a>
       </li>
     </ul>
   </div>
+
 </div>
 <!-- End sidebar -->
