--- a/views/admin.layouts/sidebar.ejs
+++ b/views/admin.layouts/sidebar.ejs
@@ -21,25 +21,25 @@
       </li>
       <li class="">
         <a href="/dashboard/viewApartment" class=" sidebar-menu_apartment">
-          <span class="las la-clipboard-list"></span>
+          <span class="las la-umbrella-beach"></span>
           <span>Căn hộ</span>
         </a>
       </li>
       <li class="">
         <a href="/dashboard/upload" class="sidebar-menu_upload">
-          <span class="las la-clipboard-list"></span>
+          <span class="las la-edit"></span>
           <span>Đăng tin</span>
         </a>
       </li>
       <li class="">
         <a href="/dashboard/comment" class="sidebar-menu_comment">
-          <span class="las la-clipboard-list"></span>
+          <span class="las la-comment"></span>
           <span>Bình Luận</span>
         </a>
       </li>
       <li class="">
         <a href="/dashboard/notification" class=" sidebar-menu_notification">
-          <span class="las la-sign-out-alt"></span>
+          <span class="las la-clipboard-list"></span>
           <span>Thông báo</span>
         </a>
       </li>
