--- a/views/admin/comment.ejs
+++ b/views/admin/comment.ejs
@@ -4,7 +4,7 @@
         <div class="content-header"></div>
         <div class="content__body  ">
           <div class="card">
-            <div class="card-header bg-primary ">
+            <div class="card-header">
               <h4>Quản lý bình luận</h4>
             </div>
             <div class="card-body">
@@ -12,9 +12,8 @@
                 <thead>
                   <tr>
                     <th class="text-center align-middle">STT</th>
-                    <th class="text-center align-middle text-nowrap">User name</th>
+                    <th class="text-center align-middle text-nowrap">Tên người dùng</th>
                     <th class="text-center align-middle">Nội dung bình luận</th>
-                    <th class="text-center align-middle text-nowrap">Tên căn hộ </th>
                     <th class="text-center align-middle" >Action</th>
                   </tr>
                 </thead>
@@ -24,9 +23,8 @@
                     <th class="text-center align-middle"><%= index +1 %></th>
                     <td class="text-center align-middle text-nowrap"><%= user.userName %></td>
                     <td class="text-center align-middle"><%= user.content %></td>
-                    <td class="text-center align-middle text-nowrap"><%= user.apartmentId %></td>
                     <td class="text-center align-middle">
-                      <button class="btn btn-danger"> Xóa </button>
+                      <a href="/dashboard/deletecmt?id=<%= user._id %>" class="btn btn-danger">Xóa</a>
                     </td>
                   </tbody>
                 <% }) %>
