--- a/views/admin/upload.ejs
+++ b/views/admin/upload.ejs
@@ -8,7 +8,7 @@
         enctype="multipart/form-data"
       >
         <div class="card mb-3">
-          <div class="card-header bg-primary">
+          <div class="card-header ">
             <h4>Đăng tin</h4>
           </div>
           <div class="card-body">
