--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -4,7 +4,7 @@
       <div class="content-header"></div>
       <div class="content__body active ">
         <div class="card">
-          <div class="card-header bg-primary ">
+          <div class="card-header">
             <h4>Quản lý tài khoản</h4>
           </div>
           <div class="card-body">
