--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -4,7 +4,7 @@
 <div class="header__header-main ">
     <div class="site-header  ">
         <div class="site-identity">
-            <a href="#">
+            <a href="/">
                 <!-- <div class="logo-icon">
                 <i class="fa-solid fa-plane-departure"></i>
             </div> -->
