--- a/public/styles/apartment.css
+++ b/public/styles/apartment.css
@@ -373,13 +373,13 @@ a.star.vote-active {
   height: 260px;
   display: flex;
   display: inline-block;
-  line-height: 1.5;
-  padding: 15px;
+  line-height: 2.5;
+  padding: 20px;
   text-decoration: double;
-  font-size: 15px;
+  font-size: 16px;
   position: relative;
   border-radius: 15px;
-  margin: 21px;
+  margin: 34px;
   box-shadow: 0 0 10px black;
 }
 .twoBtn {
@@ -491,13 +491,14 @@ a.star.vote-active {
   float: left;
 }
 .name {
-  display: inline-block;
+  display: flex;
   /* text-shadow: 1px 1px 5px aqua; */
   color: white;
   padding-left: 15px;
   padding-bottom: 15px;
   font-size: 17px;
   font-weight: 600;
+  justify-content: space-between;
 }
 .commented-comment {
   height: auto;
@@ -531,4 +532,141 @@ a.star.vote-active {
 }
 .bxs-message-rounded-detail {
   font-size: 20px;
+}
+
+.login-form {
+  width: 100%;
+  max-width: 400px;
+  margin: 20px auto;
+  background-color: #ffffff;
+  padding: 15px;
+  border: 2px dotted #cccccc;
+  border-radius: 10px;
+}
+
+.input-box {
+  margin-bottom: 10px;
+}
+
+.input-box output {
+  padding: 15px 100px;
+  width: 100%;
+  border: 1px solid #cccccc;
+  outline: auto;
+  word: spacing 5px;
+  display: block;
+}
+
+.form-control {
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #0d0d0e;
+  background-color: #f1eeee;
+  background-clip: padding-box;
+  border: 1px solid #f6f5f5;
+  border-radius: 0.25rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.form-inline {
+  display: inline-block;
+  width: auto;
+}
+
+.table {
+  border-collapse: collapse;
+  width: 100%;
+  border: 1px solid #000;
+  color: #f6f8f9;
+  border: center;
+}
+
+.table1 {
+  width: 70%;
+  margin: auto;
+}
+
+.kkkk {
+  background: #499fcb;
+}
+
+.table td,
+.table th {
+  white-space: nowrap;
+  padding: 10px 15px;
+  vertical-align: top;
+  border: 1px solid #000;
+}
+
+.table thead tr th {
+  font-weight: bold;
+  vertical-align: bottom;
+  padding: 10px 15px;
+  font-size: 13px;
+}
+
+.table tbody tr td {
+  color: #4c4c4c;
+  font-size: 13px;
+  font-weight: 400;
+  vertical-align: middle;
+}
+
+th {
+  text-align: inherit;
+}
+
+.form-group {
+  color: #0c0c0c;
+  margin-bottom: 20px;
+  font-size: 15px;
+}
+.center {
+  width: 100%;
+  height: 65px;
+  text-align: center;
+  display: flow-root;
+}
+.btn-success {
+  margin-top: 20px;
+  display: flexbox;
+
+  height: 40px;
+  padding: 0 15px;
+  background: #57b846;
+  border-radius: 3px;
+  font-size: 14px;
+  color: #fff;
+  transition: all 0.2s ease-out, color 0.2s ease-out;
+  border: 0;
+  font-weight: bold;
+  cursor: pointer;
+}
+.login-form h1 {
+  margin-bottom: 15px;
+}
+.input-box i {
+  margin-bottom: 10px;
+}
+.input-box output {
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+.form-control {
+  margin-top: 10px;
+  margin-bottom: 15px;
+}
+.input-box-outputPrice {
+  font-size: 15px;
+}
+.btn-bxs-heart.open {
+  background-color: red;
+}
+.btn-bxs-message.open {
+  background-color: red;
 }
