--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -290,15 +290,18 @@ body {
   width: 80%;
 }
 
-.bannerSearchCard {
+.bannerSearchCard{
+  background: #1b1d32;
+    padding: 20px;
+    border-radius: 20px;
+}
+.background_card {
   display: flex;
   width: 100%;
   height: 100%;
   background: white;
-  padding: 20px;
   border-radius: 20px;
-  justify-content: space-between;
-  margin: 40px 0;
+  justify-content: space-around;
 }
 
 .inputAdress {
@@ -310,28 +313,35 @@ body {
   flex-direction: column;
   justify-content: center;
   margin-left: 15px;
+  border-bottom: 2px solid #000;
 }
 .iconAdress {
   font-size: 24px;
-  padding: 18px;
-  border-radius: 20px;
-  display: flex;
-  align-items: center;
-  background: #ebfcff;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    background: #ebfcff;
 }
 
 .nameAdress {
-  font-size: 20px;
-  max-width: 3px 0;
-  margin-bottom: 5px;
-  font-weight: 600;
+  margin-left: 4px;
+    font-size: 14px;
+    max-width: 3px 0;
+    margin-bottom: 5px;
+    font-weight: 600;
 }
 .inputNameAdress {
   padding: 5px 5px 5px 0;
   font-size: 16px;
   margin-top: 3px;
 }
-
+.inputAdress__inner select {
+  padding: 4px 4px 4px 0;
+  width: 200px;
+  border: none;
+  font-size: 16px;
+  font-weight: 500;
+}
 .inputPrice {
   font-size: 24px;
   padding: 18px;
@@ -350,17 +360,15 @@ body {
   background: transparent;
 }
 .banner__btnSearch i {
-  display: flex;
   color: white;
-  width: 100%;
-  font-size: 33px;
-  justify-content: center;
-  align-items: center;
-  padding: 16px;
-  background: black;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: 0.1s ease;
+    width: 100%;
+    font-size: 20px;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 18px;
+    background: #1b1d32;
+    border-radius: 8px;
+    cursor: pointer;
 }
 .banner__btnSearch i:hover{
   transform: scale(1.02);
