--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -2,7 +2,7 @@
     <a href="/dashboard/users" class="card-single">
       <div>
         <h1><%=numOfUser%></h1>
-        <span>Users</span>
+        <div>Users</div>
       </div>
       <div>
         <span class="las la-users"></span>
@@ -11,21 +11,30 @@
     <a href="/dashboard/viewApartment" class="card-single">
       <div>
         <h1><%=numOfPost%></h1>
-        <span>Apartments</span>
+        <div>Apartments</div>
       </div>
       <div>
-        <span class="las la-users"></span>
+        <span class="las la-umbrella-beach"></span>
       </div>
     </a>
-    <div class="card-single">
+    <a href="/dashboard/comment" class="card-single">
+      <div>
+        <h1><%= numOfComment%></h1>
+        <div>Comments</div>
+      </div>
+      <div>
+        <span class="las la-comment"></span>
+      </div>
+    </a>
+    <a href="/dashboard/notification" class="card-single">
       <div>
         <h1>65</h1>
-        <span>Comments</span>
+        <div>Notifications</div>
       </div>
       <div>
         <span class="las la-clipboard-list"></span>
       </div>
-    </div>
+    </a>
   </div>
   <script>
     const $ = document.querySelector.bind(document)
