--- a/views/admin/notification.ejs
+++ b/views/admin/notification.ejs
@@ -4,7 +4,7 @@
         <div class="content-header"></div>
         <div class="content__body  ">
           <div class="card">
-            <div class="card-header bg-primary ">
+            <div class="card-header">
               <h4>Quản lý thông báo</h4>
             </div>
             <div class="card-body">
