--- a/views/admin/viewApartment.ejs
+++ b/views/admin/viewApartment.ejs
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <div class="card">
-        <div class="card-header bg-primary">
+        <div class="card-header">
           <h4>Quản lý đăng tin</h4>
         </div>
         <div class="card-body">
@@ -38,7 +38,7 @@
       aria-hidden="true">
       <div class="modal-dialog" role="document">
         <div class="modal-content">
-          <div class="modal-header bg-primary text-center align-center">
+          <div class="modal-header text-center align-center">
             <h5 class="modal-title " id="exampleModalLabel">Edit upload</h5>
             <button type="button" class="close bg-danger p-2" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
