--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -30,59 +30,59 @@
               </span>
             </div>
             <div class="bannerSearchCard">
-              <div class="inputAdress">
-                <div class="iconAdress">
-                  <i class="fa-solid fa-location-dot"></i>
+              <form action="/search" method="POST">
+              <div class="background_card">
+                <div class="inputAdress">
+                  <div class="iconAdress">
+                    <i class="fa-solid fa-location-dot"></i>
+                  </div>
+                  <div class="inputAdress__inner">
+                    <select name="region" id="">
+                      <option value="">Miền</option>
+                      <option value="Miền Bắc">Miền Bắc</option>
+                      <option value="Miền Trung">Miền Trung</option>
+                      <option value="Miền Nam">Miền Nam</option>
+  
+                    </select>
+                  </div>
                 </div>
-                <div class="inputAdress__inner">
-                  <span class="nameAdress">Miền</span>
-                  <select name="" id="">
-                    <option value="">---</option>
-                    <option value="mienbac">Miền Bắc</option>
-                    <option value="mientrung">Miền Trung</option>
-                    <option value="miennam">Miền Nam</option>
-
-                  </select>
+  
+                <div class="inputPrice">
+                  <div class="iconAdress">
+                    <i class="fa-solid fa-money-bill-wave"></i>
+                  </div>
+                  <div class="inputAdress__inner">
+                    <select name="price" id="">
+                      <option value="">Giá tiền</option>
+                      <option value="1000000000">Dưới 1.000.000.000</option>
+                      <option value="2000000000">Dưới 2.000.000.000</option>
+                      <option value="3000000000">Dưới 3.000.000.000</option>
+                      <option value="5000000000">Dưới 5.000.000.000</option>
+                      <option value="10000000000">Dưới 10.000.000.000</option>
+                    </select>
+                  </div>
                 </div>
+  
+                <div class="inputType">
+                  <div class="iconAdress">
+                    <i class="fa-solid fa-building"></i>
+                  </div>
+                  <div class="inputAdress__inner">
+                    <select name="acreage" id="">
+                      <option value="">Diện tích</option>
+                      <option value="20">Dưới 20m</option>
+                      <option value="30">Dưới 30m</option>
+                      <option value="50">Dưới 50m</option>
+                      <option value="70">Dưới 70m</option>
+  
+                    </select>
+                  </div>
+                </div>
+                <button class="banner__btnSearch" type="submit">
+                  <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
               </div>
-
-              <div class="inputPrice">
-                <div class="iconAdress">
-                  <i class="fa-solid fa-money-bill-wave"></i>
-                </div>
-                <div class="inputAdress__inner">
-                  <span class="nameAdress">Giá Tiền</span>
-                  <select name="price" id="">
-                    <option value="">---</option>
-                    <option value="1000">Dưới 1.000.000.000</option>
-                    <option value="2000">Dưới 2.000.000.000</option>
-                    <option value="3000">Dưới 3.000.000.000</option>
-                    <option value="5000">Dưới 5.000.000.000</option>
-                    <option value="10000">Dưới 10.000.000.000</option>
-                  </select>
-                </div>
-              </div>
-
-              <div class="inputType">
-                <div class="iconAdress">
-                  <i class="fa-solid fa-building"></i>
-                </div>
-                <div class="inputAdress__inner">
-                  <span class="nameAdress">Diện Tích</span>
-                  <select name="acreage" id="">
-                    <option value="">---</option>
-                    <option value="20">Dưới 20m</option>
-                    <option value="30">Dưới 30m</option>
-                    <option value="50">Dưới 50m</option>
-                    <option value="70">Dưới 70m</option>
-
-                  </select>
-                </div>
-              </div>
-
-              <button class="banner__btnSearch">
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </button>
+            </form>
             </div>
           </div>
         </div>
