--- a/views/admin.layouts/navbar.ejs
+++ b/views/admin.layouts/navbar.ejs
@@ -5,7 +5,9 @@
         <label for="nav-toggle">
           <span class="las la-bars"></span>
         </label>
-        Real Estate Resort Analysis Support System
+        <a class="home__page" href="/">
+          Real Estate Resort Analysis Support System
+        </a>
       </h2>  
       <div class="search-wrapper">
         <span class="las la-search"> </span>
